# LiteLLM

./: .env.example  .gitignore  CLAUDE.md  CODE_REVIEW.md  Makefile  OPTIMIZATION_COMPLETE.md  README.md  all_mock_tests_results.txt  all_mock_tests_results_v2.txt  cli_litetext.py  cli_litevision.py  conftest.py  drugbank_medicine.py  fix_gradio_imports.py  gemini_chat.py  google_search.py  medicine_info.py  mock_tests.txt  requirements-dev.txt  requirements.txt  setup.py  sl_litetext.py  sl_litevision.py  test_game_complete.py  test_game_simple.py  test_gradio_imports.py  test_guesser_game.py  websearch.py
app/MedKit/: .gitignore  API.md  ARCHITECTURE.md  CLI_REFERENCE.md  CODE_STYLE_GUIDE.md  CONTRIBUTING.md  FAQ.md  README.md  README_PROFESSIONAL.md  TEST_FILES_CREATED.txt  TROUBLESHOOTING.md  __init__.py  __main__.py  drugbank_medicine.py  extract_medical_codes.py  generate_all_contracts.py  medical_dictionary.py  medicine_explainer.py  medicine_info.py  outputs.md  pyproject.toml
app/MedKit/diagnostics/: README.md  diagnostics_cli.py  medical_test_devices_cli.py  medical_test_devices_guide.md  medical_test_info_cli.py  medical_test_info_guide.md  medical_tests_graph.py
app/MedKit/drug/: README.md  __init__.py  drug_cli.py  drug_disease_interaction_cli.py  drug_disease_interaction_models.py  drug_drug_interaction_cli.py  drug_food_interaction_cli.py  drug_food_interaction_models.py  drugs_comparison_cli.py  medicine_explainer.py  medicine_info_cli.py  medicine_info_models.py  rxnorm_client_cli.py  similar_drugs_cli.py
app/MedKit/med_codes/: get_icd11.py  mock_test_get_icd11.py  test_get_icd11_mock.py
app/MedKit/med_dictionary/: README.md  dictionary_builder.py  explore_medical_dictionary.py  extract_medical_codes.py  medical_classification_prompts.py  medical_dictionary.py  medical_dictionary_cli.py  medical_dictionary_prompts.py  medical_term_classify.py  mock_test_medical_term_classify.py  prompt_builder.py  prompt_builder1.py  review_medical_dictionary.py  test_medical_term_classify.py  test_terms.txt
app/MedKit/med_legal/: README.md  __init__.py  legal_rights.py  legal_rights_cli.py  legal_rights_models.py  medical_topic.py  medical_topic_cli.py  medical_topic_prompts.py  mock_test_legal_rights_cli.py  test_legal_rights.py  test_legal_rights_cli_mock.py  test_legal_rights_mock.py
app/MedKit/medical/: README.md  disease_info_cli.py  eval_physical_exam_questions_cli.py  exam_specifications.py  herbal_info_cli.py  medical_anatomy_cli.py  medical_anatomy_models.py  medical_cli.py  medical_decision_guide_cli.py  medical_dictionary.py  medical_faq_cli.py  medical_faq_models.py  medical_implant_cli.py  medical_implant_models.py  medical_myths_checker.py  medical_topic_cli.py  run_all_tests.py  surgery_info_cli.py  surgery_info_models.py  surgical_tool_info_cli.py  surgical_tool_info_models.py  synthetic_case_report_cli.py  synthetic_case_report_models.py  user_guide.py
app/MedKit/medkit_agent/: orchestrator.py
app/MedKit/medkit_article/: README.md  __init__.py  article_cli.py  article_gradio.py  biomcp_article_search.py  sl_articles_search.py
app/MedKit/medkit_diagnose/: README.md  __init__.py  diagnose_cli.py  diagnose_gradio.py  medical_tests_graph.py
app/MedKit/medkit_graph/: graph_cli.py
app/MedKit/medkit_privacy/: README.md  anonymization.py  audit_logger.py  deidentification.py  mock_test_privacy_modules.py  pii_utils.py  privacy_cli.py  privacy_compliance.py  session_repository.py  (+2 more)
lite/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  config.py  image_utils.py  lite_chat.py  lite_client.py  lite_mcq_client.py  lite_response_judge.py  litellm_mcq_client.py  logging_config.py  pyproject.toml  requirements.txt  test_context_expansion.py  test_history.py  tmp  utils.py
lite/examples/: 01_basic_usage.py  02_structured_data.py  03_mcq_solver.py  04_llm_judge.py  README.md
lite/litellm_tools/: __init__.py  config.py  logging_config.py  text.py  vision.py
lite/scripts/: clean.sh  format.sh  lint.sh  test.sh
lite/storage/: lmdb_storage.py  storage_config.py
lite/tests/: test_config.py  test_image_utils.py  test_lite_client.py  test_mcq_client.py  test_vision_io.py  test_vision_processing.py
lite/utils/: __init__.py  json_cleaner.py  print_response.py  save_response.py
lite/vision/: __init__.py  collection.py  core.py  io.py  processing.py  validation.py
(+2494 files in other folders)
