[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medkit-tools"
version = "0.1.0"
description = "Professional medical information and reference tools"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "tqdm",
    "litellm",
    "pydantic",
    "google-genai",
    "typing-extensions",
    "rich",
]

[project.scripts]
medkit-medical = "medical.medical_cli:main"
medkit-sane = "sane_interview.sane_interview_cli:cli"
medkit-recognizer = "recognizers.medical_recognizer_cli:main"
medkit-dictionary = "med_dictionary.medical_dictionary_cli:main"
medkit-codes = "med_codes.get_icd11:main"
medkit-mental = "mental_health.mental_health_chat_app:cli"
medkit-drug = "drug.drug_cli:main"
medkit-agent = "medkit_agent.orchestrator:main"
medkit-media = "medical.med_media.med_media_cli:main"
medkit-privacy = "medkit_privacy.privacy_cli:main"
medkit-article = "medkit_article.article_cli:main"
medkit-diagnose = "medkit_diagnose.diagnose_cli:main"
medkit-exam = "phyexams.phyexams_cli:main"
medkit-graph = "medkit_graph.graph_cli:main"

[tool.setuptools]
packages = ["medical", "drug", "mental_health", "recognizers", "sane_interview", "med_dictionary", "med_codes", "medkit_diagnose", "phyexams", "medkit_agent", "medkit_privacy", "medkit_article", "medkit_graph"]
